# my_work

./: .env.sample  main.py  pyproject.toml
fromskypro/src/: decorators.py  generators.py  processing.py  widget.py
fromskypro/tests/: test_generators.py  test_masks.py  test_processing.py  widget.py
src/: almost_exel_table.py  bank_operations.py  decorators.py  dictionary_processing.py  external_API.py  generators.py  logger.py  masks.py  processing.py  utils.py  widget.py
tests/: Test_decorators.py  __init__.py  mylog.txt  test.xlsx  test_almost_exel_table.py  test_generators.py  test_log1.txt  test_log2.txt  test_masks.py  test_processing.py  test_untils.py  test_widget.py  widget.py
