[tool.poetry]
name = "fromskypro"
version = "0.1.0"
description = "Твои деньги пойдут в фонд помощи людям после франко-мафиозного сражения"
authors = ["Velikiy astmatik"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.2"



[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240514"
openpyxl = "^3.1.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
black = "^24.4.2"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''
[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
